Fix for unit panel so that unit info text is always more visible.

--- a/freeciv-web/src/main/webapp/css/civclient.css
+++ b/freeciv-web/src/main/webapp/css/civclient.css
@@ -862,8 +862,9 @@ body
   float: left;
   color: white;
   background-color: rgba(0,0,0,0.6);
-  font-size: 95%;
+  font-size: 96%;
   padding-top: 2px;
+  max-width: 120px;
 }
 
 #active_unit_info span {
